--- a/Client/Views/AdminHome/Index.cshtml
+++ b/Client/Views/AdminHome/Index.cshtml
@@ -1,8 +1,9 @@
-﻿
-@{
+﻿@{
+    ViewData["Title"] = "Home";
     Layout = "_ViewGeneralAdmin";
 }
-
-<div class="text-center">
-    <h1 class="display-4"><b>WELCOME TO MCC 63</b></h1>
+<div class="card" style = "height : 200px;">
+    <div class="text-center" style="margin:auto;">
+        <h1 class="display-4"><b>CONTROLLER WEBSIDE</b></h1>
+    </div>
 </div>
