--- a/Client/Views/Shared/_ViewGeneralAdmin.cshtml
+++ b/Client/Views/Shared/_ViewGeneralAdmin.cshtml
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Client</title>
 
+    <link rel="stylesheet" href="~/css/formSetting.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
+    <!--JS Data table-->
+    <link rel="stylesheet" href="https://code.jquery.com/jquery-3.5.1.js">
+    @*<link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js">
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js">*@
+
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
@@ -21,10 +28,13 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="bi bi-list-task"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="https://localhost:44332/" class="nav-link">Home</a>
+                    <a asp-controller="AdminHome" asp-action="Index" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="https://localhost:44332/admin" class="nav-link">AdminAcc</a>
+                <li class="nav-item d-none d-sm-inline-block border-left">
+                    <a href="https://localhost:44332/admin" class="nav-link">Progres</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block border-left">
+                    <a href="https://dashboard.midtrans.com/" target="_blank" class="nav-link">Midtrans</a>
                 </li>
             </ul>
 
@@ -67,8 +77,8 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="https://localhost:44332/" class="brand-link">
-                <img src="https://i.pinimg.com/564x/b9/cc/64/b9cc6475537bc5c3e93ea5db1929ca65.jpg" width="40" height="40">
+            <a asp-controller="AdminHome" asp-action="index" class="brand-link">
+                <img src="~/lib/bootstrap/dist/img/admin.png" class="shadow" width="40" height="40">
                 <span class="brand-text font-weight-light"> Controller Admin</span>
             </a>
 
@@ -91,7 +101,7 @@
                         <!-- Add icons to the links using the .nav-icon class
                              with font-awesome or any other icon font library -->
                         <!-- add Menu Data User-->
-                        <li class="nav-item">
+                        <li class="nav-item menu-open">
                             <a class="nav-link active">
                                 <i class="nav-icon bi bi-table"></i>
                                 <p style="margin : auto;">
@@ -101,16 +111,16 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
+                                    <a href="https://localhost:44329/data" class="nav-link">
+                                        <i class="bi bi-cash-coin nav-icon"></i>
                                         <p>Daftar Pembayaran</p>
                                     </a>
                                 </li>
                             </ul>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="" asp-action="" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
+                                    <a asp-area="" asp-controller="ClassAdmin" asp-action="Index" class="nav-link">
+                                        <i class="bi bi-people-fill nav-icon"></i>
                                         <p>Data User</p>
                                     </a>
                                 </li>
@@ -118,7 +128,7 @@
                         </li>
 
                         <!-- add Menu Content-->
-                        <li class="nav-item">
+                        <li class="nav-item menu-open">
                             <a href="#" class="nav-link active">
                                 <i class="nav-icon bi bi-pencil-square"></i>
                                 <p>
@@ -128,7 +138,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="TestCors" asp-action="Index" class="nav-link">
+                                    <a href="https://localhost:44329/regclass" class="nav-link">
                                         <i class="bi bi-file-earmark-plus nav-icon"></i>
                                         <p>Create Class</p>
                                     </a>
@@ -136,7 +146,7 @@
                             </ul>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="TestCors" asp-action="Index" class="nav-link">
+                                    <a href="https://localhost:44329/dataclass" class="nav-link">
                                         <i class="bi bi-file-ruled nav-icon"></i>
                                         <p>Table Class</p>
                                     </a>
@@ -145,7 +155,7 @@
                         </li>
 
                         <!-- add Menu Content-->
-                        <li class="nav-item">
+                        <li class="nav-item menu-open">
                             <a href="#" class="nav-link active">
                                 <i class="nav-icon bi bi-pencil-square"></i>
                                 <p>
@@ -155,15 +165,15 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="TestCors" asp-action="Index" class="nav-link">
+                                    <a href="https://localhost:44329/regsection" class="nav-link">
                                         <i class="bi bi-file-earmark-plus nav-icon"></i>
-                                        <p>Create Class</p>
+                                        <p>Create Section</p>
                                     </a>
                                 </li>
                             </ul>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a asp-area="" asp-controller="TestCors" asp-action="Index" class="nav-link">
+                                    <a href="https://localhost:44329/datasection" class="nav-link">
                                         <i class="bi bi-file-ruled nav-icon"></i>
                                         <p>Table Content</p>
                                     </a>
@@ -184,12 +194,12 @@
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0">Start Page</h1>
+                            <h1 class="m-0"> </h1>
                         </div><!-- /.col -->
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
                                 <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active">Start Page</li>
+                                <li class="breadcrumb-item active">Page</li>
                             </ol>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
@@ -202,9 +212,7 @@
                     <div class="row">
                         <!-- /.col-md-2 -->
                         <div class="col-lg-12">
-                            <div class="card">
-                                @RenderBody()
-                            </div>
+                            @RenderBody()
                         </div>
                     </div>
                     <!-- /.row -->
@@ -238,9 +246,19 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <!-- AdminLTE App -->
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"></script>
+
+    <!-- Data Table -->
+    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css"></script>
+        <script src="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"></script>*@
+
+    <script src="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"></script>
+
+    <!--CDN JS CK EDITOR-->
+    <script src="https://cdn.ckeditor.com/ckeditor5/33.0.0/classic/ckeditor.js"></script>
+
     @RenderSection("Scripts", required: false)
 </body>
 
