--- a/Client/Views/Class/Details.cshtml
+++ b/Client/Views/Class/Details.cshtml
@@ -13,7 +13,7 @@
             <p>(Deskripsi: Laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae feugiat augue cras ut metus a risus iaculis scelerisque eu ac ante fusce non varius purus aenean nec magna felis fusce vestibulum.)</p>
             <p><span>(Nama Kategori)</span> <span>(Level)</span> <span>(Rating)</span></p>
             <button id="gen-a-button" type="button" class="btn btn-primary">Take Class</button>
-            <button id="gen-a-button" type="button" class="btn btn-info">Give Feedback</button>
+            <button id="feedback" type="button" class="btn btn-info" data-toggle="modal" data-target="#formFb">Give Feedback</button>
             <button id="gen-a-button" type="button" class="btn btn-success">View Certificate</button>
         </div>
     </div>
@@ -82,105 +82,150 @@
     </div>
 </div>
 
+@* Feedback Modal *@
+<div class="modal fade" id="formFb" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Feedback Form</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div>
+                    <form>
+                        <div class="form-group">
+                            <div class="rating">
+                                <input type="radio" name="rating" value="5" id="5"><label for="5">☆</label>
+                                <input type="radio" name="rating" value="4" id="4"><label for="4">☆</label>
+                                <input type="radio" name="rating" value="3" id="3"><label for="3">☆</label>
+                                <input type="radio" name="rating" value="2" id="2"><label for="2">☆</label>
+                                <input type="radio" name="rating" value="1" id="1"><label for="1">☆</label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputFb">Ulasan Kamu</label>
+                            <textarea class="form-control" id="exampleInputEmail1" placeholder="ketik ulasanmu disini ..." rows="3"></textarea>
+                            <small class="form-text text-muted">Ulasanmu sangat penting bagi kami.</small>
+                        </div>
+                        <button type="submit" class="btn btn-primary rounded float-right">Send Feedback</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 @* Payment Midtrans JS *@
 <script type="text/javascript">
-        var genButton = document.getElementById('gen-a-button');
-        genButton.addEventListener('click', function () {
-            let timestamp = Math.round(Date.now() / 1000);
-            $.ajax({
-                url: "https://app.sandbox.midtrans.com/snap/v1/transactions",
-                type: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "Accept": "application/json",
-                    "Authorization": "Basic " + "U0ItTWlkLXNlcnZlci1sdHhEaS1iQ3hMSGV6Z281MlRHa183cXA6"
+    var genButton = document.getElementById('gen-a-button');
+    genButton.addEventListener('click', function () {
+        let timestamp = Math.round(Date.now() / 1000);
+        $.ajax({
+            url: "https://app.sandbox.midtrans.com/snap/v1/transactions",
+            type: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Accept": "application/json",
+                "Authorization": "Basic " + "U0ItTWlkLXNlcnZlci1sdHhEaS1iQ3hMSGV6Z281MlRHa183cXA6"
+            },
+            data: JSON.stringify({
+                "transaction_details": {
+                    "order_id": `PAY-CLASS-A-${timestamp}`,
+                    "gross_amount": 2000000
                 },
-                data: JSON.stringify({
-                    "transaction_details": {
-                        "order_id": `PAY-CLASS-A-${timestamp}`,
-                        "gross_amount": 2000000
-                    },
-                    "credit_card": {
-                        "secure": true
-                    },
-                    "customer_details": {
-                        "first_name": "Dari",
-                        "last_name": "Client",
-                        "email": "Daclint@mail.com",
-                        "phone": "08110000000"
-                    }
-                })
-            }).done((result) => {
-                snap.pay(result.token);
-            }).fail((error) => {
-                console.log(error);
-            });
+                "credit_card": {
+                    "secure": true
+                },
+                "customer_details": {
+                    "first_name": "Dari",
+                    "last_name": "Client",
+                    "email": "Daclint@mail.com",
+                    "phone": "08110000000"
+                }
+            })
+        }).done((result) => {
+            snap.pay(result.token);
+        }).fail((error) => {
+            console.log(error);
         });
+    });
 
-        var genButton = document.getElementById('gen-b-button');
-        genButton.addEventListener('click', function () {
-            let timestamp = Math.round(Date.now() / 1000);
-            console.log(timestamp);
-            $.ajax({
-                url: "https://app.sandbox.midtrans.com/snap/v1/transactions",
-                type: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "Accept": "application/json",
-                    "Authorization": "Basic " + "U0ItTWlkLXNlcnZlci1sdHhEaS1iQ3hMSGV6Z281MlRHa183cXA6"
+    var genButton = document.getElementById('gen-b-button');
+    genButton.addEventListener('click', function () {
+        let timestamp = Math.round(Date.now() / 1000);
+        console.log(timestamp);
+        $.ajax({
+            url: "https://app.sandbox.midtrans.com/snap/v1/transactions",
+            type: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Accept": "application/json",
+                "Authorization": "Basic " + "U0ItTWlkLXNlcnZlci1sdHhEaS1iQ3hMSGV6Z281MlRHa183cXA6"
+            },
+            data: JSON.stringify({
+                "transaction_details": {
+                    "order_id": `PAY-CLASS-B-${timestamp}`,
+                    "gross_amount": 3000000
                 },
-                data: JSON.stringify({
-                    "transaction_details": {
-                        "order_id": `PAY-CLASS-B-${timestamp}`,
-                        "gross_amount": 3000000
-                    },
-                    "credit_card": {
-                        "secure": true
-                    },
-                    "customer_details": {
-                        "first_name": "Dari",
-                        "last_name": "Client",
-                        "email": "Daclint@mail.com",
-                        "phone": "08110000000"
-                    }
-                })
-            }).done((result) => {
-                snap.pay(result.token);
-            }).fail((error) => {
-                console.log(error);
-            });
+                "credit_card": {
+                    "secure": true
+                },
+                "customer_details": {
+                    "first_name": "Dari",
+                    "last_name": "Client",
+                    "email": "Daclint@mail.com",
+                    "phone": "08110000000"
+                }
+            })
+        }).done((result) => {
+            snap.pay(result.token);
+        }).fail((error) => {
+            console.log(error);
         });
+    });
 
-        var genButton = document.getElementById('gen-c-button');
-        genButton.addEventListener('click', function () {
-            let timestamp = Math.round(Date.now() / 1000);
-            $.ajax({
-                url: "https://app.sandbox.midtrans.com/snap/v1/transactions",
-                type: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "Accept": "application/json",
-                    "Authorization": "Basic " + "U0ItTWlkLXNlcnZlci1sdHhEaS1iQ3hMSGV6Z281MlRHa183cXA6"
+    var genButton = document.getElementById('gen-c-button');
+    genButton.addEventListener('click', function () {
+        let timestamp = Math.round(Date.now() / 1000);
+        $.ajax({
+            url: "https://app.sandbox.midtrans.com/snap/v1/transactions",
+            type: "POST",
+            headers: {
+                "Content-Type": "application/json",
+                "Accept": "application/json",
+                "Authorization": "Basic " + "U0ItTWlkLXNlcnZlci1sdHhEaS1iQ3hMSGV6Z281MlRHa183cXA6"
+            },
+            data: JSON.stringify({
+                "transaction_details": {
+                    "order_id": `PAY-CLASS-C-${timestamp}`,
+                    "gross_amount": 2500000
                 },
-                data: JSON.stringify({
-                    "transaction_details": {
-                        "order_id": `PAY-CLASS-C-${timestamp}`,
-                        "gross_amount": 2500000
-                    },
-                    "credit_card": {
-                        "secure": true
-                    },
-                    "customer_details": {
-                        "first_name": "Dari",
-                        "last_name": "Client",
-                        "email": "Daclint@mail.com",
-                        "phone": "08110000000"
-                    }
-                })
-            }).done((result) => {
-                snap.pay(result.token);
-            }).fail((error) => {
-                console.log(error);
-            });
+                "credit_card": {
+                    "secure": true
+                },
+                "customer_details": {
+                    "first_name": "Dari",
+                    "last_name": "Client",
+                    "email": "Daclint@mail.com",
+                    "phone": "08110000000"
+                }
+            })
+        }).done((result) => {
+            snap.pay(result.token);
+        }).fail((error) => {
+            console.log(error);
         });
+    });
 </script>
+
+@* Getting Rating Value
+    <button id="chk" type="button" class="btn btn-success">Check</button>
+    <script>
+        document.getElementById('chk').onclick = function () {
+            let star = document.getElementsByName('rating');
+            let selected = Array.from(star).find(radio => radio.checked);
+            console.log(selected.value);
+        }
+    </script>*@
