--- a/Client/Views/Dashboard/Index.cshtml
+++ b/Client/Views/Dashboard/Index.cshtml
@@ -8,11 +8,56 @@
         <p>Selamat belajar dan bereksplorasi.</p>
     </div>
 </div>
+
+<div class="mb-3">
+    <div class="card">
+        <div class="card-header bg-white">
+            <h5>Kelas yang Sedang Diproses Pembayaran</h5>
+        </div>
+        <div class="card-body">
+            <table class="table table-borderless table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">Class Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Date Requested</th>
+                        <th scope="col">Date Expired</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="Class">(Nama Kelas A)</a></td>
+                        <td>Rp. (xxxxxxxxx),00</td>
+                        <td>(xx xxxxxxx xxxx)</td>
+                        <td>(xx xxxxxxx xxxx)</td>
+                        <td><button type="button" class="btn btn-outline-dark">Konfirmasi Pembayaran</button></td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">(Nama Kelas B)</a></td>
+                        <td>Rp. (xxxxxxxxx),00</td>
+                        <td>(xx xxxxxxx xxxx)</td>
+                        <td>(xx xxxxxxx xxxx)</td>
+                        <td><button type="button" class="btn btn-outline-dark">Konfirmasi Pembayaran</button></td>
+                    </tr>
+                    <tr>
+                        <td><a href="#">(Nama Kelas C)</a></td>
+                        <td>Rp. (xxxxxxxxx),00</td>
+                        <td>(xx xxxxxxx xxxx)</td>
+                        <td>(xx xxxxxxx xxxx)</td>
+                        <td><button type="button" class="btn btn-outline-dark">Konfirmasi Pembayaran</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-sm">
         <div class="card">
             <div class="card-header bg-white">
-                Kelas yang Sedang Dijalani
+                <h5>Kelas yang Sedang Dijalani</h5>
             </div>
             <div class="card-body">
                 <table class="table table-borderless table-striped">
@@ -25,15 +70,15 @@
                     <tbody>
                         <tr>
                             <td><a href="Class">(Nama Kelas A)</a></td>
-                            <td><button type="button" class="btn btn-outline-info">Continue</button></td>
+                            <td><button type="button" class="btn btn-outline-primary">Continue Class</button></td>
                         </tr>
                         <tr>
                             <td><a href="#">(Nama Kelas B)</a></td>
-                            <td><button type="button" class="btn btn-outline-info">Continue</button></td>
+                            <td><button type="button" class="btn btn-outline-primary">Continue Class</button></td>
                         </tr>
                         <tr>
                             <td><a href="#">(Nama Kelas C)</a></td>
-                            <td><button type="button" class="btn btn-outline-info">Continue</button></td>
+                            <td><button type="button" class="btn btn-outline-primary">Continue Class</button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -43,7 +88,7 @@
     <div class="col-sm">
         <div class="card">
             <div class="card-header bg-white">
-                Kelas yang Sudah Selesai
+                <h5>Kelas yang Sudah Selesai</h5>
             </div>
             <div class="card-body">
                 <table class="table table-borderless table-striped">
@@ -56,15 +101,15 @@
                     <tbody>
                         <tr>
                             <td><a href="#">(Nama Kelas A)</a></td>
-                            <td><button type="button" class="btn btn-outline-info">Feedback</button><button type="button" class="btn btn-outline-info  ml-2">Certificate</button></td>
+                            <td><button type="button" class="btn btn-outline-info">Feedback</button><button type="button" class="btn btn-outline-success  ml-2">Certificate</button></td>
                         </tr>
                         <tr>
                             <td><a href="#">(Nama Kelas B)</a></td>
-                            <td><button type="button" class="btn btn-outline-info">Feedback</button><button type="button" class="btn btn-outline-info  ml-2">Certificate</button></td>
+                            <td><button type="button" class="btn btn-outline-info">Feedback</button><button type="button" class="btn btn-outline-success  ml-2">Certificate</button></td>
                         </tr>
                         <tr>
                             <td><a href="#">(Nama Kelas C)</a></td>
-                            <td><button type="button" class="btn btn-outline-info">Feedback</button><button type="button" class="btn btn-outline-info  ml-2">Certificate</button></td>
+                            <td><button type="button" class="btn btn-outline-info">Feedback</button><button type="button" class="btn btn-outline-success  ml-2">Certificate</button></td>
                         </tr>
                     </tbody>
                 </table>
