--- a/Client/Views/ClassAdmin/InputContent.cshtml
+++ b/Client/Views/ClassAdmin/InputContent.cshtml
@@ -51,6 +51,11 @@
                     <input type="text" name="price" placeholder="Input Price Class" class="form-control" id="">
                 </div>
 
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary" onclick="">Create</button>
+                    <button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+
                 <script>
                     ClassicEditor
                         .create( document.querySelector( '#content' ) )
