--- a/Client/Views/ClassAdmin/TableContent.cshtml
+++ b/Client/Views/ClassAdmin/TableContent.cshtml
@@ -18,6 +18,7 @@
                     <td>Chapter</td>
                     <td>Content</td>
                     <td>Class</td>
+                    <td>Action</td>
                 </tr>
             </thead>
             <tbody>
