--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
     </div>
 
     @* Footer *@
-    <footer class="border-top footer text-muted">
+    <footer class="border-top text-muted mt-5 pt-3 pb-3">
         <div class="container-fluid">
             <span class="ml-5">&copy; 2022 - Codemy - MCC Project</span>
         </div>
