--- a/Client/Views/Class/Details.cshtml
+++ b/Client/Views/Class/Details.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Client.Models.Class
+
 @{
     ViewData["Title"] = "Details";
 }
@@ -6,6 +7,7 @@
 <div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-sm-4">
+            <h3>@ViewBag.ClassId</h3>
             <img src="https://dummyimage.com/sqrpop" alt="" />
         </div>
         <div class="col-sm-8 align-self-center">
