--- a/Client/Views/Class/Details.cshtml
+++ b/Client/Views/Class/Details.cshtml
@@ -1,9 +1,16 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Details";
 }
 
-<div class="container mt-5 mb-5">
+<script>
+    let classId = @(ViewBag.ClassId);
+</script>
+
+<div id="classDetail">
+
+</div>
+
+@*<div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-sm-4">
             <img src="https://dummyimage.com/sqrpop" alt="" />
@@ -17,10 +24,11 @@
             <button id="gen-a-button" type="button" class="btn btn-success">View Certificate</button>
         </div>
     </div>
-</div>
+</div>*@
 
 <div class="container card mb-3">
     <div class="card-body">
+        
         <ul class="nav nav-tabs mb-3">
             <li class="nav-item">
                 <a class="nav-link active" href="#classSect">Class Sections</a>
