--- a/Client/Views/Class/Index.cshtml
+++ b/Client/Views/Class/Index.cshtml
@@ -11,33 +11,8 @@
 <div class="container text-center">
     <div class="card">
         <div id="mainCard" class="card-body">
-            <div id="filter" class="row mb-4">
-                <div class="col-sm">
-                    <p class="mb-0">Level</p>
-                    <select id="lv" class="selectpicker" multiple>
-                        <option>Beginner</option>
-                        <option>Intermediate</option>
-                        <option>Expert</option>
-                    </select>
-                </div>
+            <div id="filters" class="row mb-4">
 
-                <div class="col-sm">
-                    <p class="mb-0">Category</p>
-                    <select id="cg" class="selectpicker" multiple>
-                        <option>Front-End</option>
-                        <option>Back-End</option>
-                        <option>Fullstack</option>
-                    </select>
-                </div>
-
-                <div class="col-sm">
-                    <p class="mb-0">Price Range</p>
-                    <select id="cg" class="selectpicker" multiple>
-                        <option>500.000 - 1.000.000</option>
-                        <option>1.000.001 - 2.500.000</option>
-                        <option>2.500.000+</option>
-                    </select>
-                </div>
             </div>
 
             <div id="classes">
