--- a/Client/Views/ClassAdmin/TableContent.cshtml
+++ b/Client/Views/ClassAdmin/TableContent.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body class="hold-transition sidebar-mini layout-fixed" style="background-color: #f4f6f9;">
     <content>
-        <table class="table table-striped table-hover table-bordered" id="table_user">
+        <table class="table table-striped table-hover table-bordered" id="table3">
             <caption>Data Pembayaran</caption>
             <thead class="table-dark">
                 <tr>
