--- a/Client/Views/ClassAdmin/CreateClass.cshtml
+++ b/Client/Views/ClassAdmin/CreateClass.cshtml
@@ -15,52 +15,59 @@
             <form class="canvas shadow">
 
                 <div class="form-group">
-                    <label for="header">Tittle Class</label>
-                    <input type="text" name="header" class="form-control" placeholder="Input Header" id="">
+                    <label for="tittle">Tittle Class</label>
+                    <input type="text" name="tittle" class="form-control" placeholder="Input Title" id="judul">
+                </div>
+
+                <div class="form-group">
+                    <label for="url">URL Code</label>
+                    <input type="text" name="url" class="form-control" placeholder="Input Url Code" id="url">
                 </div>
 
                 <div class="form-group">
                     <label for="Desc">Description</label>
-                    <input type="text" name="Desc" placeholder="Input Description" class="form-control" id="content">
-
+                    <textarea type="text" name="content" class="form-control" id="desc"> </textarea>
                 </div>
 
                 <div class="form-group">
                     <label for="TotalChapter">Total Chapter</label>
-                    <input type="text" name="TotalChapter" placeholder="Input Total Chapter" class="form-control" id="">
+                    <input type="text" name="TotalChapter" placeholder="Input Total Chapter" class="form-control" id="totChapter">
                 </div>
 
                 <div class="form-group">
                     <label for="price">Class Price</label>
-                    <input type="text" name="price" placeholder="Input Price Class" class="form-control" id="">
+                    <input type="text" name="price" placeholder="Input Price Class" class="form-control" id="price">
                 </div>
 
                 <div class="form-group">
                     <label for="level">Level Class</label>
-                    <select name="level" class="form-control" id="">
-                        <option value="" disabled selected>~Choose Level Class~</option>
-                        <option value="1">Basic</option>
-                        <option value="2">Intermediate</option>
-                        <option value="3">Advance</option>
+                    <select name="level" data-target="" class="form-control" id="level">
                     </select>
                 </div>
 
                 <div class="form-group">
                     <label for="category">Category Class</label>
-                    <select name="category" class="form-control" id="">
-                        <option value="" disabled selected>~Choose Category~</option>
-                        <option value="1">Frontend</option>
-                        <option value="2">Backend</option>
-                        <option value="3">Fullstack</option>
+                    <select name="category" class="form-control" id="cate">
                     </select>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" onclick="">Create</button>
-                    <button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" onclick="InsertClass()">Create</button>
                 </div>
             </form>
         </content>
+
+        <script>
+            let editor;
+            ClassicEditor
+                .create(document.querySelector('#desc'))
+                .then(newEditor => {
+                    editor = newEditor;
+                })
+                .catch(error => {
+                    console.error(error);
+                });
+        </script>
         <p></p>
     </body>
 </dev>
