--- a/Client/Views/ClassAdmin/InputContent.cshtml
+++ b/Client/Views/ClassAdmin/InputContent.cshtml
@@ -60,3 +60,55 @@
     </body>
 </dev>
 
+
+<div class="form-group">
+    <label for="rating">Rating</label>
+    <input type="text" name="rating" disabled value="${data.rating}" class="form-control" id="rating">
+</div>
+
+<div class="form-group">
+    <label for="tittle">Tittle Class</label>
+    <input type="text" name="tittle" class="form-control" value="${data.name}" id="judul">
+</div>
+
+<div class="form-group">
+    <label for="url">URL Code</label>
+    <input type="text" name="url" class="form-control" value="${data.urlPic}" id="url">
+</div>
+
+<div class="form-group">
+    <label for="Desc">Description</label>
+    <input type="text" name="content" class="form-control" value="${data.desc}" id="descEdit">
+</div>
+
+<div class="form-group">
+    <label for="TotalChapter">Total Chapter</label>
+    <input type="text" name="TotalChapter" value="${data.totalChapter}" class="form-control" id="totChapter">
+</div>
+
+<div class="form-group">
+    <label for="price">Class Price</label>
+    <input type="text" name="price" value="${data.price}" class="form-control" id="price">
+</div>
+
+<div class="form-group">
+    <label for="level">Level Class</label>
+    <input type="text" name="level" value="${LevelConv(level)}" disabled class="form-control" id="level">
+</div>
+
+<div class="form-group">
+    <label for="category">Category Class</label>
+    <div class="row">
+        <div class="col">
+            <input type="text" name="category" value="${data.category_Id}" disabled class="form-control" id="category-id">
+        </div>
+        <div class="col">
+            <input type="text" name="category" value="${CategoryConv(category)}" disabled class="form-control" id="category">
+        </div>
+    </div>
+</div>
+
+<div class="modal-footer">
+    <button type="button" class="btn btn-primary" onclick="EditClass(${data.id})">Create</button>
+    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+</div>
