--- a/Client/Views/ClassAdmin/TableClass.cshtml
+++ b/Client/Views/ClassAdmin/TableClass.cshtml
@@ -2,15 +2,10 @@
     Layout = "_ViewGeneralAdmin";
 }
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Table</title>
-</head>
 <body class="hold-transition sidebar-mini layout-fixed" style="background-color: #f4f6f9;">
     <content>
-        <table class="table table-striped table-hover table-bordered" id="table_user">
-            <caption>Data Pembayaran</caption>
+        <table class="table display table-striped table-hover table-bordered" id="table2">
+            <caption>Data Class</caption>
             <thead class="table-dark">
                 <tr>
                     <td>No</td>
@@ -19,8 +14,6 @@
                     <td>TotalChapter</td>
                     <td>Price</td>
                     <td>Rating</td>
-                    <td>Level</td>
-                    <td>Category</td>
                     <td>Action</td>
                 </tr>
             </thead>
@@ -29,5 +22,24 @@
         </table>
     </content>
 </body>
-</html>
 
+<!--modal update-->
+<div class="modal fade" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="detetedCenterModal" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Detail Class</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="" style="position : relative; width: auto; margin : auto;" class="" id="form-class">
+
+                    
+                </form>
+                
+            </div>
+        </div>
+    </div>
+</div>
