--- a/Client/Views/Shared/_ViewGeneralAdmin.cshtml
+++ b/Client/Views/Shared/_ViewGeneralAdmin.cshtml
@@ -12,15 +12,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/css/adminlte.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-    <!--CKEditor CDN-->
-    @*<script src="https://cdn.ckeditor.com/ckeditor5/33.0.0/classic/ckeditor.js"></script>*@
-    <script src="https://cdn.ckeditor.com/4.18.0/standard/ckeditor.js"></script>
+    <!-- SweetAleret -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src=" https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.8/sweetalert2.all.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.4.8/sweetalert2.min.css">
 
-    <script charset="utf-8" src="//cdn.iframe.ly/embed.js?api_key={API KEY}"></script>
+    <!--CKEditor CDN-->
+    <script src="https://cdn.ckeditor.com/ckeditor5/33.0.0/classic/ckeditor.js"></script>
+    @*<script src="https://cdn.ckeditor.com/4.18.0/standard/ckeditor.js"></script>*@
+
     <!--JS Data table-->
-    <link rel="stylesheet" href="https://code.jquery.com/jquery-3.5.1.js">
-    @*<link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js">
-        <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js">*@
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css">
 
 </head>
 <body class="hold-transition sidebar-mini">
@@ -249,26 +252,29 @@
     <!-- REQUIRED SCRIPTS -->
     <!-- jQuery -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- Bootstrap 4 -->
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="~/js/formSetting.js"></script>
+    <script src="~/js/dataTable.js"></script>
+
 
     <!-- AdminLTE App -->
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1/dist/js/adminlte.min.js"></script>
 
-    <!-- Data Table -->
-    @* <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css"></script>
-        <script src="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"></script>*@
-
-    
-
-    <script src="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css"></script>
-    <!--CDN JS CK EDITOR-->
-    
+    <!--Data Table-->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.print.min.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
 
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </html>
