--- a/Client/Views/Class/Index.cshtml
+++ b/Client/Views/Class/Index.cshtml
@@ -3,6 +3,10 @@
     ViewData["Title"] = "Index";
 }
 
+<div id="codemyClasses">
+
+</div>
+
 <div id="mainTitle" class="text-center mb-5 mt-5">
     <h3>Daftar Kelas Codemy</h3>
     <p>Silahkan pilih kelas yang kamu inginkan</p>
