--- a/Client/Views/Class/Index.cshtml
+++ b/Client/Views/Class/Index.cshtml
@@ -3,6 +3,10 @@
     ViewData["Title"] = "Index";
 }
 
+<div id="codemyClasses">
+
+</div>
+
 <div id="mainTitle" class="text-center mb-5 mt-5">
     <h3>Daftar Kelas Codemy</h3>
     <p>Silahkan pilih kelas yang kamu inginkan</p>
@@ -11,137 +15,13 @@
 <div class="container text-center">
     <div class="card">
         <div id="mainCard" class="card-body">
-            <div id="filter" class="row mb-4">
-                <div class="col-sm">
-                    <p class="mb-0">Level</p>
-                    <select id="lv" class="selectpicker" multiple>
-                        <option>Beginner</option>
-                        <option>Intermediate</option>
-                        <option>Expert</option>
-                    </select>
-                </div>
+            <div id="filters" class="row mb-4">
 
-                <div class="col-sm">
-                    <p class="mb-0">Category</p>
-                    <select id="cg" class="selectpicker" multiple>
-                        <option>Front-End</option>
-                        <option>Back-End</option>
-                        <option>Fullstack</option>
-                    </select>
-                </div>
-
-                <div class="col-sm">
-                    <p class="mb-0">Price Range</p>
-                    <select id="cg" class="selectpicker" multiple>
-                        <option>500.000 - 1.000.000</option>
-                        <option>1.000.001 - 2.500.000</option>
-                        <option>2.500.000+</option>
-                    </select>
-                </div>
             </div>
 
             <div id="classes">
-                <div class="row mb-3">
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="card-body text-left">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img src="https://www.fpaceforum.com/media/100x100.4555/full" alt="" />
-                                    </div>
-                                    <div class="col-sm-9 align-self-center">
-                                        <h5 class="mb-4 font-weight-bold"><a href="class/details">(Nama Kelas A)</a></h5>
-                                        <span>(Nama Kategori)</span> <span>(Level)</span> <span>(Rating)</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="card-body text-left">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img src="https://www.fpaceforum.com/media/100x100.4555/full" alt="" />
-                                    </div>
-                                    <div class="col-sm-9 align-self-center">
-                                        <h5 class="mb-4 font-weight-bold"><a href="class/details">(Nama Kelas B)</a></h5>
-                                        <span>(Nama Kategori)</span> <span>(Level)</span> <span>(Rating)</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="row mb-3">
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="card-body text-left">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img src="https://www.fpaceforum.com/media/100x100.4555/full" alt="" />
-                                    </div>
-                                    <div class="col-sm-9 align-self-center">
-                                        <h5 class="mb-4 font-weight-bold"><a href="class/details">(Nama Kelas C)</a></h5>
-                                        <span>(Nama Kategori)</span> <span>(Level)</span> <span>(Rating)</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="card-body text-left">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img src="https://www.fpaceforum.com/media/100x100.4555/full" alt="" />
-                                    </div>
-                                    <div class="col-sm-9 align-self-center">
-                                        <h5 class="mb-4 font-weight-bold"><a href="class/details">(Nama Kelas D)</a></h5>
-                                        <span>(Nama Kategori)</span> <span>(Level)</span> <span>(Rating)</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row mb-3">
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="card-body text-left">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img src="https://www.fpaceforum.com/media/100x100.4555/full" alt="" />
-                                    </div>
-                                    <div class="col-sm-9 align-self-center">
-                                        <h5 class="mb-4 font-weight-bold"><a href="class/details">(Nama Kelas E)</a></h5>
-                                        <span>(Nama Kategori)</span> <span>(Level)</span> <span>(Rating)</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card">
-                            <div class="card-body text-left">
-                                <div class="row">
-                                    <div class="col-sm-3">
-                                        <img src="https://www.fpaceforum.com/media/100x100.4555/full" alt="" />
-                                    </div>
-                                    <div class="col-sm-9 align-self-center">
-                                        <h5 class="mb-4 font-weight-bold"><a href="class/details">(Nama Kelas F)</a></h5>
-                                        <span>(Nama Kategori)</span> <span>(Level)</span> <span>(Rating)</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
 </div>
-
-
